<resources>
    <string name="app_name">Sun* Movie</string>
    <!--Title-->
    <string name="title_discover">Discover</string>
    <string name="title_genre">Genre</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_actor">Actor</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_popular">Popular</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_upcoming">Up coming</string>
    <string name="title_top_rates">Top rate</string>
    <!--Text-->
    <string name="text_trailers">Trailers</string>
    <string name="text_casts">Casts</string>
    <string name="text_crews">Crews</string>
    <string name="text_company">Company</string>
    <string name="text_movies">Movies</string>
    <string name="text_summary">Summary</string>
    <string name="text_reviews">Reviews</string>
    <string name="text_biography">Biography</string>
    <string name="text_description">Description</string>
    <string name="text_information">Information</string>
    <string name="text_company_information">Company Information</string>
    <!--Text-->
    <string name="text_coming_soon">Coming Soon</string>
    <!--Notification-->
    <string name="notify_like">You like it !!!</string>
    <string name="notify_dislike">You dislike it !!!</string>
    <!--Hint-->
    <string name="hint_search">Search movies</string>
    <string name="slash">/</string>
</resources>
